--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,15 @@
+# netlify.toml
 [build]
-publish = "." # Specifies the directory to deploy. "." means the current directory.
-# For simple HTML/JS/CSS, no build command is typically needed.
-# If you had a build step (e.g., Webpack, a static site generator), you'd put it here:
+# This tells Netlify that the 'web_client' folder contains the files to publish.
+# Make sure this path is correct relative to the root of your Git repository.
+publish = "web_client"
+
+# If you had a build command (e.g., using a JavaScript build tool like Webpack, Vite, etc.),
+# you would put it here. For simple HTML/CSS/JS, it's usually not needed.
 # command = "npm run build"
+
+# Optional: Basic redirect rules if needed
+# [[redirects]]
+#   from = "/old-path"
+#   to = "/new-path"
+#   status = 301
